--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Navigation Menu</title>
-  <link rel="stylesheet" href="Chinmay.css">
+  <title>Enhanced Navigation Menu</title>
+  <link rel="stylesheet" href="STYLE.css">
 </head>
 <body>
   <nav id="navbar">
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#services">Our Services</a></li>
+      <li><a href="#contact">Get in Touch</a></li>
     </ul>
   </nav>
 
   <div class="content">
-    <section id="home" style="height: 100vh; background: lightblue;">Home Section</section>
-    <section id="about" style="height: 100vh; background: lightgreen;">About Section</section>
-    <section id="services" style="height: 100vh; background: lightcoral;">Services Section</section>
-    <section id="contact" style="height: 100vh; background: lightyellow;">Contact Section</section>
+    <section id="home" style="height: 100vh; background: rgb(255, 165, 0);"><b><i>Welcome to Home</i></b></section>
+    <section id="about" style="height: 100vh; background: rgb(0, 128, 255);"><b><i>About Us</i></b></section>
+    <section id="services" style="height: 100vh; background: rgb(240, 240, 240);"><i>Our Services</i><b></b></section>
+    <section id="contact" style="height: 100vh; background: rgb(34, 193, 195);"><b><i>Contact Us</i></b></section>
   </div>
 
-  <script src="Chinmay.js"></script>
+  <script src="SCRIPT.js"></script>
 </body>
 </html>
